[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Actors/Player/BasicPlayer.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 60 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
COYOTE_TIME = 0.2

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -60 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 25 )

[node name="coyote_timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="jump_buffer_timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = -502.0
margin_top = -291.0
margin_right = -365.0
margin_bottom = -205.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 137.0
margin_bottom = 14.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 137.0
margin_bottom = 32.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 137.0
margin_bottom = 50.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 137.0
margin_bottom = 68.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 137.0
margin_bottom = 86.0
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
